[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["Azattes"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mako = "^1.2.4"
typer = "^0.7.0"
alembic = "^1.10.1"
asyncpg = "^0.27.0"
asyncio = "^3.4.3"
python-dotenv = "^1.0.0"
ormar = "^0.12.1"
asyncclick = "^8.1.3.4"
anyio = "^3.6.2"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
